<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WeatherShowDetails1.WeatherShowDetails1"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="cityName"
        android:id="@+id/cityname_detail"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:transitionName="@string/transition_cityname"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last update:"
        android:id="@+id/textView2"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/cityname_detail"
        android:layout_toStartOf="@+id/update_time" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/update_time"
        android:gravity="left"
        android:layout_below="@+id/cityname_detail"
        android:layout_alignStart="@+id/pressure_detail"
        android:transitionName="@string/transition_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="description"
        android:id="@+id/description_detail"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/textView6"
        android:transitionName="@string/transition_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Humidity:"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pressure:"
        android:id="@+id/textView6"
        android:layout_below="@+id/description_detail"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/pressure_detail"
        android:layout_below="@+id/description_detail"
        android:layout_alignEnd="@+id/cityname_detail"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/temp_detail"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/imageView"
        android:transitionName="@string/transition_temp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/humidity_detail"
        android:layout_below="@+id/pressure_detail"
        android:gravity="left"
        android:layout_alignStart="@+id/pressure_detail"
        android:transitionName="@string/transition_humidity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Wind:"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/wind_detail"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView6"
        android:transitionName="@string/transition_speed"/>
</RelativeLayout>
