<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/item_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="#FAFAFA"
    android:foreground="?attr/selectableItemBackground"


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="match_parent"
                android:id="@+id/citynameTextView1"
                android:text="@string/city_name"

                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="NA"
                android:id="@+id/dateTextView1"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/weather_icon1"
                    android:src="@drawable/ic_sunny"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/description1"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="match_parent"
                android:text="description"

                android:gravity="center_vertical"/>
            <!-- android:transitionName="@string/transition_description"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="15dp"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Temperature"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/transition_temp"
                    android:text="NA"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NA"
                    android:id="@+id/windTextView1"
                    android:transitionName="@string/transition_speed"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NA"
                    android:id="@+id/humidityTextView1"
                    android:transitionName="@string/transition_humidity"
                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="posted time: "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NA"
                android:id="@+id/postedTime1"/>


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>